GL: Add kissfft and use dB scaling Really implement spectrum analyser functionality A new setting allows one to set the dynamic range displayed to whatever is used in practice (up to 144 dB for full 24 bit audio)
Note: A new class KFFTR was derived from MRFFT used in other visualizations:
* discard DC bin
* fix hardcoded stereo (just sum up all channels)
* fix broken Hann window function (!)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -47,9 +47,17 @@ else()
     add_definitions(${OPENGLES_DEFINITIONS})
   endif()
 
-  set(SPECTRUM_SOURCES src/opengl_spectrum.cpp)
+  set(SPECTRUM_SOURCES src/opengl_spectrum.cpp
+                       src/kfftr.cpp)
 
-  include_directories(${GLM_INCLUDE_DIR})
+  set(SPECTRUM_HEADERS src/kfftr.h)
+
+  list(APPEND DEPLIBS kissfft)
+
+  include_directories(${GLM_INCLUDE_DIR}
+                      ${PROJECT_SOURCE_DIR}/lib/kissfft)
+
+  add_subdirectory(${PROJECT_SOURCE_DIR}/lib/kissfft)
 endif()
 
 message(STATUS "Configured render system: ${APP_RENDER_SYSTEM}")
